fix: Comment out background color for project caption links to improve visibility

--- a/css/main.css
+++ b/css/main.css
@@ -447,7 +447,7 @@ body {
 .project-caption a {
   display: inline-flex;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  /*background-color: rgba(0, 0, 0, 0.5); */
   border-radius: 4px;
   padding: 5px 8px;
   margin-right: 8px;
@@ -457,7 +457,7 @@ body {
 
 
 .project-caption a:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+ /*  background-color: rgba(0, 0, 0, 0.5); */
   transform: translateY(-2px);
   color: var(white);
 }
